deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-active
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 9876
    targetPort: 9876
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-preview
  namespace: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 9876
    targetPort: 9876
  type: ClusterIP
